HlsMediaProcessorTest more adjustments